modified:   .classpath 	modified:   .project 	modified:   .settings/org.eclipse.jdt.core.prefs 	modified:   pom.xml 	modified:   src/main/java/mx/com/proyecti/controller/EmployeeController.java 	modified:   target/classes/application.properties

--- a/.classpath
+++ b/.classpath
@@ -32,8 +32,9 @@
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="org.eclipse.jst.component.nondependency" value=""/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/AROM/eclipse-workspace/EmployeeRest/lib/ojdbc5.jar"/>
+	<classpathentry kind="lib" path="C:/Users/AROM/eclipse-workspace/EmployeeRest/lib/ojdbc6.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
